feat: add automatic track switching functionality

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -46,7 +46,7 @@
             <p>© 2023</p>
             <a href="https://github.com/milee777" target="_blank">GitHub</a>
         </div>
-        <a href="https://rs.school/js-stage0/" target="_blank" class="rss"><img src="assets/icons/rss.svg" alt="RSS"></a>
+        <h2>Ligai Mi Dia</h2>
     </footer>
     <script src="script.js"></script>
     <script src="playList.js"></script>
